# vct-emea-kickoff-simulator

./: README.md  pyproject.toml
vct_emea_optimized/: .gitignore  README.md
vct_emea_optimized/.github/workflows/: ci.yml
vct_emea_optimized/streamlit_app/: Home.py
vct_emea_optimized/streamlit_app/pages/: 01_Worst_to_Best_Ranker.py
