[project]
name = "vct-emea-kickoff-simulator"
version = "0.1.0"
description = "Personal Streamlit app to simulate VCT EMEA Kickoff (triple-elimination) and build a worst→best ranking interactively."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Mathieu" }]
dependencies = [
  "streamlit>=1.31",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

